Fix some styles (scroll, input/button widths on smaller screens)

--- a/src/styles/enemycreate.scss
+++ b/src/styles/enemycreate.scss
@@ -37,12 +37,12 @@
       background: $darker-purple;
       box-shadow: $shadow;
       outline: none;
-      min-width: 180px;
+      min-width: 160px;
       span {
         width: 100%;
         line-height: 50px;
         color: white;
-        margin-right: 20px;
+        margin-right: 10px;
       }
     }
   }
@@ -59,5 +59,19 @@
   border-radius: 50%;
   text-align: center;
   line-height: 50px;
-  color: white
+  color: white;
+}
+
+@media screen and (max-width: 430px) {
+  .enemy-create {
+    .enemy-input {
+      button {
+        min-width: 50px;
+        max-width: 50px;
+        span {
+          display: none;
+        }
+      }
+    }
+  }
 }
