--- a/src/styles/enemyitem.scss
+++ b/src/styles/enemyitem.scss
@@ -1,31 +1,32 @@
 @import 'variables';
 
-.enemy-item-wrap .enemy-item {
-  background: rgba(255,255,255, .4);
-  padding: 10px 20px;
-  display: flex;
-  justify-content: space-between;
-  border-top: 1px solid $mid-purple;
-  &.dead {
-    opacity: .7;
-    p {
-      pointer-events: none;
-      text-decoration: line-through;
-      color: $red;
+.enemy-item-wrap {
+  max-height: calc(100vh - 230px);
+  overflow: scroll;
+  .enemy-item {
+    background: rgba(255,255,255, .4);
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid $mid-purple;
+    &.dead {
+      opacity: .7;
+      p {
+        pointer-events: none;
+        text-decoration: line-through;
+        color: $red;
+      }
     }
-  }
-  p {
-    width: 90%;
-    margin: 0;
-    font-size: 20px;
-    line-height: 50px;
-    text-transform: capitalize;
-  }
-  &:last-child {
-    margin-bottom: 50px;
-  }
-  .add-button.death {
-    margin-right: 15px;
-    background-color: $red;
+    p {
+      width: 90%;
+      margin: 0;
+      font-size: 20px;
+      line-height: 50px;
+      text-transform: capitalize;
+    }
+    .add-button.death {
+      margin-right: 15px;
+      background-color: $red;
+    }
   }
 }
